--- a/base.css
+++ b/base.css
@@ -1,3 +1,5 @@
+/* * { outline:solid 1px red} */
+
 *,
 *::after,
 *::before {
@@ -10,7 +12,9 @@
 
 html {
 	/* cursor:none; */
-	width: 100%;
+	/* width: 100%; */
+	/* overflow: hidden; */
+	
 }
 
 /* html,  */
@@ -23,29 +27,24 @@ html {
 	overflow-y: hidden;
 } */
 
-section {
-	width: 100%;
-	position: relative;
-	background-color: transparent;
-	padding: 9em 12em 0 12em;
-	z-index: -99999;
-}
+
 
 body {
 	margin: 0;
 	--color-text: #1f1e1d;
-    --color-bg: #ffffff;
+    --color-bg: #ffff;
     --color-link: #ff0101;
 	--color-link-hover: #fc6565;
 	--color-content-title-sub: #292828;
     color: var(--color-text);
-    background-color: var(--color-bg);
+    background-color: #fff;
     --cursor-stroke: #6b5537;
     --cursor-fill: none;
     --cursor-stroke-width: 1px;
 	font-family: futura, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
 }
 
 
@@ -101,7 +100,7 @@ a:focus {
 	}
 }
 
-.message {
+/* .message {
 	position: relative;
 	z-index: 100;
 	text-align: center;
@@ -110,21 +109,21 @@ a:focus {
 	padding: 1rem;
 	font-size: 0.85rem;
 	position: relative;
-}
+} */
 
-.no-select {
+/* .no-select {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-}
+} */
 
 .frame {
-	padding: 3rem 5vw;
+	/* padding: 3rem 5vw;
 	text-align: center;
 	position: relative;
-	z-index: 1000;
+	z-index: 1000; */
 }
 
 .frame__title {
@@ -157,11 +156,15 @@ a:focus {
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
-	height: calc(100vh - 13rem);
+	height: 100vh;
+	max-height: 100%;
+	/* height: calc(100vh - 13rem); */
 	position: relative;
 	align-items: center;
 	justify-content: center;
-	max-height: 300px;
+	
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 .grid {
@@ -172,8 +175,8 @@ a:focus {
 	top: -5%;
 	left: -5%;
 	display: grid;
-	grid-template-columns: repeat(50,2%);
-	grid-template-rows: repeat(50,2%);
+	grid-template-columns: repeat(fr,fr);
+	grid-template-rows: repeat(fr,fr);
 }
 
 .grid__item {
@@ -210,19 +213,19 @@ a:focus {
 }
 
 .pos-2 {
-	grid-area: 1 / 18 / 19 / 27;
+	grid-area: 5 / 18 / 20 / 30;
 }
 
 .pos-3 {
-	grid-area: 1 / 36 / 14 / 42;
+	grid-area: 5 / 26 / 18 / 55;
 }
 
 .pos-4 {
-	grid-area: 13 / 11 / 32 / 18;
+	grid-area: 18 / 11 / 32 / 24;
 }
 
 .pos-5 {
-	grid-area: 17 / 29 / 22 / 38;
+	grid-area: 13 / 24 / 17 / 32;
 }
 
 .pos-6 {
@@ -249,6 +252,10 @@ a:focus {
 	grid-area: 27 / 5 / 33 / 15;
 }
 
+.pos-12 {
+	grid-area: 15 / 43 / 23 / 33;
+}
+
 .content__title {
 	font-family: sans-serif;
 	font-weight: bold;
@@ -270,32 +277,142 @@ a:focus {
 	text-align: center;
 }
 
+
+.parent {
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+    align-items: center;
+	justify-content: center;
+	
+  }
+  .img {
+	width: 90%;
+	min-height: 400px;
+	padding: 2rem;
+	margin-top: 2rem;
+	/* max-width: 200px; */
+  }
+  
+  .txt {
+	width: auto;
+	padding: 2rem;
+	min-height: 500px;
+	color: #222;
+	
+	
+  }
+
+
+
+  /* .parent {
+	margin-top: 7rem;
+	padding-top: 2rem;
+	
+	flex-direction: row;
+	
+	width: 100%;
+	
+  } */
+  
+  .img {
+	/* width: 30%; */
+	/* padding: 2em; */
+	
+  }
+  
+  .txt {
+	/* width: 30%; */
+
+	
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
 .cursor {
 	display: none;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (min-width: 53em) {
-	.message {
+	/* .message {
 		display: none;
-	}
+	} */
 	.frame {
+
+		padding: 3rem 5vw;
+		text-align: center;
+		position: relative;
+		z-index: 1000;
+
 		position: absolute;
 		text-align: left;
 		z-index: 100;
 		top: 0;
 		left: 0;
-		display: grid;
+		display: flex;
 		align-content: space-between;
 		width: 100%;
 		max-width: none;
-		height: 100%;
-		padding: 3rem;
+		height: 4rem;
+		padding: 2rem;
 		pointer-events: none;
-		grid-template-columns: 75% 25%;
+		flex-direction: column;
+		flex-wrap: wrap;
+		align-items: baseline;
+		justify-content: center;
+
+
+		/* grid-template-columns: 75% 25%;
 		grid-template-rows: auto auto auto;
 		grid-template-areas: 'title links'
 							'... ...'
-							'... demos';
+							'... demos'; */
 	}
 	.frame__title-wrap {
 		grid-area: title;
@@ -326,8 +443,127 @@ a:focus {
 	.content {
 		height: 100%;
 		justify-content: center;
-		max-height: none;
+		max-height: 100vh;
+		
+
+		display: flex;
+		flex-direction: column;
+		width: 100vw;
+		height: 100vh;
+		max-height: 100%;
+		/* height: calc(100vh - 13rem); */
+		position: relative;
+		align-items: center;
+		justify-content: center;
+		
+		overflow-y: hidden;
+		overflow-x: hidden;
+
 	}
+
+
+	.grid {
+		/* pointer-events: none; */
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		display: grid;
+		grid-template-columns: repeat(fr,fr);
+		grid-template-rows: repeat(fr,fr);
+	}
+	
+	.grid__item {
+		position: relative;
+	}
+	
+	.grid--img .grid__item {
+		overflow: hidden;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		will-change: transform;
+	}
+	
+	.grid__item-img {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		background-size: cover;
+		background-position: 50% 50%;
+		border-radius: 3%;
+	}
+	
+	.grid--img .grid__item-img {
+		flex: none;
+		width: calc(100% + 100px);
+		height: calc(100% + 100px);
+		will-change: transform;
+	}
+
+
+
+
+	.pos-1 {
+		grid-area: 10 / 1 / 26 / 7;
+	}
+	
+	.pos-2 {
+		grid-area: 5 / 21 / 20 / 30;
+	}
+	
+	.pos-3 {
+		grid-area: 1 / 36 / 14 / 42;
+	}
+	
+	.pos-4 {
+		grid-area: 13 / 11 / 32 / 18;
+	}
+	
+	.pos-5 {
+		grid-area: 18 / 28 / 19 / 29;
+	}
+	
+	.pos-6 {
+		grid-area: 20 / 46 / 28 / 51;
+	}
+	
+	.pos-7 {
+		grid-area: 43 / 1 / 51 / 10;
+	}
+	
+	.pos-8 {
+		grid-area: 38 / 14 / 46 / 22;
+	}
+	
+	.pos-9 {
+		grid-area: 33 / 26 / 47 / 32;
+	}
+	
+	.pos-10 {
+		 grid-area: 37 / 39 / 48 / 47;
+	}
+	
+	.pos-11 {
+		grid-area: 27 / 5 / 33 / 15;
+	}
+	
+	.pos-12 {
+		grid-area: 15 / 43 / 23 / 33;
+	}
+
+
+
+
+
+
+
+
+
+
+
+
 	main {
 		height: 100vh;
 		width: 100%;
@@ -335,7 +571,57 @@ a:focus {
 		overflow-x: hidden;
 		overflow-y: hidden;
 	}
+
+
+
+	.parent {
+		margin-top: 7rem;
+		padding-top: 2rem;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		
+	  }
+	  
+	  .img {
+		width: 40%;
+		padding: 2em;
+		color: #ffffff;
+		/* min-height: 800px; */
+	  }
+	  
+	  .txt {
+		width: 40%;
+		padding: 3rem;
+		/* min-height: 500px; */
+		color: #222;
+		
+	  }
+	  
+	
+
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (any-pointer: fine) {
 	.cursor {
@@ -347,8 +633,8 @@ a:focus {
 	}
 	.cursor__inner {
 		fill: var(--cursor-fill);
-		stroke: var(--cursor-stroke);
-		stroke-width: var(--cursor-stroke-width);
+		stroke: red;
+		stroke-width: 1px;
 	}
 }
 
