--- a/base.css
+++ b/base.css
@@ -69,7 +69,7 @@ h1 {
 }
 
 h2 {
-	font-size: 1.25rem;
+	font-size: 1.5vh;
 	color:rgba(233, 16, 16, 0.815);
 }
 
@@ -272,7 +272,7 @@ h2 {
 	margin: 0;
 	line-height: 1;
 	position: relative;
-	z-index: -9;
+	z-index: -9999;
 	text-align: center;
 }
 
@@ -568,11 +568,11 @@ h2 {
 	}
 	
 	.pos-9 {
-		grid-area: 30 / 30 / 49 / 37;
+		grid-area: 32 / 31 / 49 / 37;
 		z-index: -99;
 	}
 	.pos-9t {
-		grid-area: 31 / 30 / 49 / 37;
+		grid-area: 46 / 35 / 49 / 37;
 		z-index: -99;
 	}
 	
@@ -585,20 +585,20 @@ h2 {
 
 	
 	.pos-11 {
-		grid-area: 18 / 11 / 31 / 20;
+		grid-area: 18 / 8 / 31 / 17;
 		z-index: -999;
 	}
 	.pos-11t {
-		grid-area: 28 / 12 / 32 / 21;
+		grid-area: 28 / 14 / 32 / 21;
 		z-index: -999;
 	}
 	
 	.pos-12 {
-		grid-area: 12 / 29 / 26 / 40;
+		grid-area: 9 / 29 / 21 / 40;
 		z-index: -99;
 	}
 	.pos-12t {
-		grid-area: 13 / 36 / 18 / 40;
+		grid-area: 17 / 36 / 18 / 40;
 		z-index: -99;
 	}
 
