--- a/base.css
+++ b/base.css
@@ -267,8 +267,9 @@ h2 {
 
 .content__title {
 	font-family: sans-serif;
+	color: rgba(0, 0, 0, 0.418);
 	font-weight: bold;
-	font-size: 9vw;
+	font-size: 7vw;
 	margin: 0;
 	line-height: 1;
 	position: relative;
@@ -277,8 +278,8 @@ h2 {
 }
 
 .content__title-sub {
-	color: var(--color-content-title-sub);
-	font-size: 2.5vw;
+	color: rgba(0, 0, 0, 0.418);
+	font-size: 2vw;
 	display: block;
 	margin-left: 3vw;
 	line-height: 0.5;
