--- a/base.css
+++ b/base.css
@@ -96,7 +96,7 @@ h2 {
 	height: 60px;
 	margin: -30px 0 0 -30px;
 	border-radius: 50%;
-	/* opacity: 0.4; */
+	opacity: 0.4;
 	background: var(--color-link);
 	animation: loaderAnim 0.7s linear infinite alternate forwards;
 
@@ -265,61 +265,88 @@ h2 {
 
 
 .pos-1 {
-	grid-area: 5 / 4 / 13 / 20;
-	/* profile haircut */
+	grid-area: 5 / 4 / 12 / 18;
+	/* haircut */
 }
 
 .pos-2 {
-	grid-area: 6 / 12 / 16 / 34;
+	grid-area: 6 / 12 / 16 / 37;
 	z-index: -9;
 	/* queen */
 }
 
 .pos-3 { 
-	grid-area: 4 / 31 / 19 / 44;
+	grid-area: 4 / 33 / 19 / 48;
 	z-index: -99;
 	/* diver */
 }
 
+.pos-4 {
+	grid-area: 17 / 5 / 25 / 20; 
+	/* tie */
+}
 
 
 .pos-5 {
-	grid-area: 13 / 24 / 17 / 32;
+	grid-area: 18 / 22 / 24 / 43;
+	z-index: -999;
+	/* makeup */
 }
 
+
 .pos-6 {
-	grid-area: 20 / 46 / 28 / 51;
+	grid-area: 29 / 4 / 40 / 22;
+	/* bike */
 }
 
 .pos-7 {
-	grid-area: 43 / 1 / 51 / 10;
+	grid-area: 38 / 10 / 46 / 35; 
+	/* woman sitting */
 }
 
+
+
 .pos-8 {
-	grid-area: 38 / 14 / 46 / 22;
+	grid-area: 31 / 33 / 47 / 49;
+	z-index: -99;
+	/* man walking */
 }
 
 .pos-9 {
-	grid-area: 40 / 26 / 51 / 32;
+	grid-area: 22 / 32 / 30 / 49;
+	z-index: -9999;
+	/* bag */
 }
 
-.pos-10 {
- 	grid-area: 37 / 39 / 48 / 47;
+
+
+
+	.pos-1t {
+	grid-area: 13 / 7 / 20 / 18;
 }
 
-.pos-11 {
-	grid-area: 17 / 5 / 25 / 20;
+	.pos-2t {
+	grid-area: 22 / 9 / 19 / 35;
 }
 
-.pos-12 {
-	grid-area: 20 / 29 / 25 / 44;
+
+	.pos-3t {
+	grid-area: 16 / 47 / 26 / 44;
+	z-index: -998;
 }
+
+	.pos-4t {
+	grid-area: 33 / 25 / 44 / 40;
+	z-index: -99;
+}
+
+
 
 }
 
 .content__title {
 	font-family: sans-serif;
-	color: rgba(0, 0, 0, 0.418);
+	color: rgba(0, 0, 0, 0.815);
 	font-weight: bold;
 	font-size: 7vw;
 	margin: 0;
@@ -333,7 +360,7 @@ h2 {
 
 
 .content__title-sub {
-	color: rgba(0, 0, 0, 0.418);
+	color: rgba(0, 0, 0, 0.795);
 	font-size: 1.5vw;
 	display: block;
 	margin-left: 3vw;
@@ -347,7 +374,7 @@ h2 {
 	.content__title {
 		color: rgba(0, 0, 0, 0.418);
 		font-weight: bold;
-		font-size: 8vw;
+		font-size: 13vw;
 		margin: 0;
 		line-height: 1;
 		position: absolute;
@@ -599,88 +626,104 @@ h2 {
 	.pos-1 {
 		grid-area: 2 / 4 / 20 / 14;
 	}
-	.pos-1t {
-		grid-area: 9 / 15 / 20 / 18;
-	}
-	
-	
 	.pos-2 {
 		grid-area: 4 / 18 / 20 / 30;
 	}
-	.pos-2t {
-		grid-area: 3 / 32 / 19 / 35;
-	}
-	
 	.pos-3 {
 		grid-area: 3 / 38 / 26 / 46;
 		z-index: -998;
 	}
-	.pos-3t {
-		grid-area: 16 / 47 / 26 / 50;
-		z-index: -998;
-	}
-
-
-	
 	.pos-4 {
-		grid-area: 13 / 11 / 32 / 18;
+		grid-area: 18 / 8 / 31 / 17;
+		z-index: -99;
+		/* tie */
 	}
-	
-	
-	
+	.pos-5 {
+		grid-area: 9 / 29 / 21 / 40;
+		z-index: -99;
+	}
 	.pos-6 {
-		grid-area: 20 / 46 / 28 / 51;
-	}
-	
-	.pos-7 {
 		grid-area: 30 / 2 / 49 / 12;
 	}
-	.pos-7t {
-		grid-area: 46 / 3 / 49 / 12;
-	}
-
-	
-	.pos-8 {
+	.pos-7 {
 		grid-area: 32 / 14 / 46 / 26;
 	}
-	.pos-8t {
-		grid-area: 32 / 15 / 46 / 26;
-	}
-	
-	.pos-9 {
+	.pos-8 {
 		grid-area: 32 / 31 / 49 / 37;
 		z-index: -99;
 	}
-	.pos-9t {
-		grid-area: 46 / 35 / 49 / 37;
+	.pos-9 {
+		grid-area: 31 / 39 / 47 / 50;
+   }
+
+
+
+   .pos-1t {
+	grid-area: 9 / 15 / 20 / 18;
+}
+
+	.pos-2t {
+	grid-area: 3 / 32 / 19 / 35;
+}
+
+
+	.pos-3t {
+	grid-area: 16 / 47 / 26 / 50;
+	z-index: -998;
+}
+
+	.pos-4t {
+	grid-area: 23 / 34 / 29 / 40;
+	z-index: -99;
+}
+
+/* .pos-7t {
+	grid-area: 46 / 3 / 49 / 12;
+}
+
+
+
+.pos-8t {
+	grid-area: 32 / 15 / 46 / 26;
+}
+
+
+.pos-9t {
+	grid-area: 46 / 35 / 49 / 37;
+	z-index: -99;
+}
+
+
+.pos-10t {
+	grid-area: 32 / 46 / 48 / 49;
+}
+
+.pos-11t {
+	grid-area: 28 / 14 / 32 / 21;
+	z-index: -999;
+} */
+
+
+
+
+
+	/* .pos-5 {
+		grid-area: 9 / 29 / 21 / 40;
 		z-index: -99;
 	}
 	
-	.pos-10 {
-		 grid-area: 31 / 39 / 47 / 50;
-	}
-	.pos-10t {
-		grid-area: 32 / 46 / 48 / 49;
-   }
-
 	
 	.pos-11 {
 		grid-area: 18 / 8 / 31 / 17;
 		z-index: -999;
 	}
-	.pos-11t {
-		grid-area: 28 / 14 / 32 / 21;
-		z-index: -999;
-	}
 	
-	.pos-12 {
+	
+	.pos-5 {
 		grid-area: 9 / 29 / 21 / 40;
 		z-index: -99;
-	}
-	.pos-12t {
-		grid-area: 23 / 34 / 25 / 40;
-		z-index: -99;
-	}
+	} */
+
 
 
 
