--- a/base.css
+++ b/base.css
@@ -348,7 +348,7 @@ h2 {
 	font-family: sans-serif;
 	color: rgba(0, 0, 0, 0.815);
 	font-weight: bold;
-	font-size: 7vw;
+	font-size: 13vw;
 	margin: 0;
 	line-height: 1;
 	position: relative;
@@ -361,9 +361,9 @@ h2 {
 
 .content__title-sub {
 	color: rgba(0, 0, 0, 0.795);
-	font-size: 1.5vw;
+	font-size: 3vw;
 	display: block;
-	margin-left: 3vw;
+	/* margin-left: 3vw; */
 	line-height: 0.5;
 	z-index: -9;
 	text-align: center;
@@ -559,6 +559,8 @@ h2 {
 	}
 
 
+
+
 	.grid {
 		/* pointer-events: none; */
 		position: absolute;
@@ -613,7 +615,7 @@ h2 {
 		z-index: -998;
 	}
 	.pos-4 {
-		grid-area: 18 / 8 / 31 / 17;
+		grid-area: 18 / 6 / 31 / 15;
 		z-index: -99;
 		/* tie */
 	}
@@ -625,7 +627,7 @@ h2 {
 		grid-area: 30 / 2 / 49 / 12;
 	}
 	.pos-7 {
-		grid-area: 32 / 14 / 46 / 26;
+		grid-area: 34 / 14 / 47 / 26;
 	}
 	.pos-8 {
 		grid-area: 32 / 31 / 49 / 37;
