--- a/galerie.css
+++ b/galerie.css
@@ -1,4 +1,4 @@
- /* * { outline:solid 1px red}  */
+ * { outline:solid 1px red} 
 
 
 *,
@@ -15,6 +15,22 @@
 	 font-family: 'Cormorant Garamond';
 }
 
+
+html, body {
+    /* height:100%; */
+  }
+  
+  body {
+    margin:0;
+    padding:0;
+  }
+  
+
+
+
+  
+
+
 h1 {
     font-size: 9vh;
     text-align: center;
@@ -29,13 +45,25 @@ p {
     
 }
 
+
+
+
+
+
+
+
+
+
  .container {
 	 background: #f7f3f3;
 }
+
+
+
  .container .hero {
-	 display: grid;
-	 grid-template-columns: 60% 40%;
-	 height: 100vh;
+	 display: flex;
+	 /* grid-template-columns: 20% 80%; */
+	 /* height: 100vh; */
 }
  .container .hero .copy {
 	 display: grid;
@@ -67,12 +95,85 @@ p {
 	 width: 100%;
 	 object-fit: cover;
 }
+
+
+
+/* .video { 
+    display: block;
+
+	 grid-template-columns: 60% 40%;
+	 height: 100vh;
+    padding-top: 3em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit:stretch;
+    object-position: center;
+
+   
+    
+} */
+
+
+
+/* div#fashion {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
+
+
+
+
+
+
+/* .video-wrapper {
+    position: fixed;
+    top: 0; 
+    right: 0; 
+    bottom: 0; 
+    left: 0;
+    overflow: hidden;
+ }
+ 
+ .video-wrapper >  #player {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor:pointer;
+ }
+ 
+ @media (min-aspect-ratio: 16/9) {
+     #video-wrapper >  #player { 
+        height: 300%; 
+        top: -100%; 
+     }
+ }
+ 
+ @media (max-aspect-ratio: 16/9) {
+     #video-wrapper > #player { 
+        width: 300%; 
+        left: -100%; 
+     }
+ } */
+
+
+
+
+
+
  .container .section-0 {
 	 margin-top: 20vh;
 	 text-align: center;
 }
  .container .section-0 p {
-	 font-size: 5vw;
+	 font-size: 4vw;
 }
  .container .section-0 cite {
 	 font-size: 3vw;
@@ -86,7 +187,7 @@ p {
  .container .section-1 .image-mask {
 	 width: 80vw;
 	 height: 80vh;
-	 background: url('https://firebasestorage.googleapis.com/v0/b/hashnode-tutorials.appspot.com/o/bwimages%2Ftumblr_n92tblyC8d1s3sziio1_1280.jpg?alt=media&token=c5d75884-4bc3-46bb-815d-414d2ec68e4b');
+	 background: url('img/landing/all.png');
 	 background-size: cover;
 	 background-position-x: 50%;
 	 background-position-y: 90%;
@@ -112,7 +213,10 @@ p {
 	 display: block;
 	 padding: 8px 0;
 }
+
+
  .container .section-2 {
+	 margin-top: 10vh;
 	 height: calc(300vh + 32px + 16px);
 	 display: grid;
 	 grid-template-columns: 1fr 2fr;
