--- a/base.css
+++ b/base.css
@@ -7,14 +7,14 @@
 }
 
 :root {
-	font-size: 18px;
+	font-size: 16px;
 }
 
 html {
 	/* cursor:none; */
 	/* width: 100%; */
 	/* overflow: hidden; */
-	
+	scroll-behavior: smooth;
 }
 
 /* html,  */
@@ -29,11 +29,27 @@ html {
 
 
 
+
+
+
+
+
+
+
+
+
+
 body {
 	margin: 0;
+	--color-primary: #18181a;
+	 --color-secondary: #75757c;
+	 --color-dark: #ff0101;
+	 --color-light: #f5f5f5;
+	 --td: 150ms;
+	 --te: cubic-bezier(0.215, 0.61, 0.355, 1);
 	--color-text: #1f1e1d;
     --color-bg: #ffff;
-    --color-link: #ff0101;
+    --color-link: #fa90d7;
 	--color-link-hover: #fc6565;
 	--color-content-title-sub: #292828;
     color: var(--color-text);
@@ -41,11 +57,24 @@ body {
     --cursor-stroke: #ff0000;
     --cursor-fill: none;
     --cursor-stroke-width: 1px;
-	font-family: futura, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	overflow-x: hidden;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
 }
+
+
+::-moz-selection { /* Code for Firefox */
+	color: rgb(61, 58, 58);
+	background: rgb(147, 147, 148);
+  }
+  
+  ::selection {
+	color: rgb(61, 58, 58);
+	background: rgb(147, 147, 148);
+  }
 
 
 a {
@@ -64,14 +93,178 @@ a:focus {
 	outline: none;
 }
 
+
+
+
+
+
 h1 {
-	color: rgba(0, 0, 0, 0.603);
+	color:rgba(233, 16, 16, 0.815);
+	font-weight: bold;
+	font-size: 3.5vw;
+	margin: 0; 
 }
 
 h2 {
-	font-size: 1.5vh;
+	font-size: 1.75rem;
 	color:rgba(233, 16, 16, 0.815);
 }
+h3 {
+	font-size: .85rem;
+	color:rgba(233, 16, 16, 0.815);
+}
+
+p {
+	font-size: 19px;
+	line-height: 1.4;
+	font-weight: 400;
+	letter-spacing: 1.5px;
+	/* padding: 12px; */
+}
+
+
+
+
+
+
+/* title styles */
+.home-title span{
+    position: relative;
+    overflow: hidden;
+    display: block;
+    line-height: 1.2;
+}
+
+.home-title span::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--color-dark);
+    animation: a-ltr-after 1.2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(-101%);
+}
+
+.home-title span::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color);
+    animation: a-ltr-before 1.2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(0);
+}
+
+.home-title span:nth-of-type(1)::before,
+.home-title span:nth-of-type(1)::after{
+    animation-delay: 0.75s;
+}
+
+.home-title span:nth-of-type(2)::before,
+.home-title span:nth-of-type(2)::after{
+    animation-delay: 0.5s;
+}
+
+@keyframes a-ltr-after{
+    0% {transform: translateX(-100%)}
+    100% {transform: translateX(101%)}
+}
+
+@keyframes a-ltr-before{
+    0% {transform: translateX(0)}
+    100% {transform: translateX(200%)}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* clouds */
+.cloud-text {
+	
+	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;	
+	background-image: url(https://images.unsplash.com/photo-1525667218880-145f026b0ad0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2162&q=80);
+	background-size: auto;
+	background-attachment: unset;
+	background-position: 0%;
+	width: 100%;
+	/* margin: 10%; */
+	font-size: 12vw;
+	font-weight: bold;
+	animation: clouds-moving infinite 60s;
+	animation-fill-mode: forwards;
+	animation-play-state: running;
+	animation-timing-function: linear;
+	text-align: center;
+}
+@keyframes clouds-moving {
+	0% {
+		background-position: 0%;	
+	}
+	50% {
+		background-position: 100%;	
+	}
+	100% {
+		background-position: 0%;
+	}
+}
+.attribute {
+	position: relative;
+	font-size: 26px;
+	text-align: center;
+}
+
+
+
+
+
+
+
+/* background */
+/* #background{
+	position:absolute;
+	font-family:'Helvetica';
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+	color:rgba(255, 255, 255, .1);
+	background: linear-gradient(to right,     rgb(76, 217, 105), rgb(52, 170, 220),     rgb(88, 86, 217), rgb(255, 45, 83),       rgb(255, 45, 83), rgb(88, 86, 217),       rgb(52, 170, 220), rgb(76, 217, 105));
+	background-size: 400%;
+	-webkit-background-clip:text;
+	font-weight:900;
+	font-size:2em;
+	text-align:left;
+	animation:sTransition 15s linear infinite;
+  }
+  
+  @keyframes sTransition{
+	0%{
+	  background-position:0%;
+	}
+	
+	100%{
+	  background-position:400%;
+	}
+  } */
+
+
 
 /* Page Loader */
 .js .loading::before,
@@ -396,31 +589,45 @@ h2 {
 
 
 
-.parent {
+@media screen and (max-width: 53em) {
 
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-    align-items: center;
-	justify-content: center;
-	
-  }
-  .img {
-	width: 90%;
-	min-height: 400px;
-	padding: 2rem;
-	margin-top: 2rem;
-	/* max-width: 200px; */
-  }
-  
-  .txt {
-	width: auto;
-	padding: 2rem;
-	min-height: 500px;
-	color: #222;
-	
-	
-  }
+	.parent {
+
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+		align-content: space-around;
+		
+		/* overflow-x: hidden; */
+		
+	  }
+	  .img {
+		
+		max-width: 700px;
+		width: 100%;
+		height: auto;
+		min-height: 700px;
+		padding: 2rem;
+		margin-top: 2rem;
+		
+		/* max-width: 200px; */
+	  }
+	  
+	  .txt {
+		width: auto;
+		padding: 2rem;
+		/* min-height: 500px; */
+		color: #222;
+		
+		
+	  }
+
+
+}
+
+
 
 
 
@@ -610,10 +817,10 @@ h2 {
 		grid-area: 2 / 4 / 20 / 14;
 	}
 	.pos-2 {
-		grid-area: 4 / 18 / 20 / 30;
+		grid-area: 5 / 20 / 20 / 30;
 	}
 	.pos-3 {
-		grid-area: 3 / 38 / 26 / 46;
+		grid-area: 3 / 38 / 26 / 43;
 		z-index: -998;
 	}
 	.pos-4 {
@@ -629,7 +836,7 @@ h2 {
 		grid-area: 30 / 2 / 49 / 12;
 	}
 	.pos-7 {
-		grid-area: 34 / 14 / 47 / 26;
+		grid-area: 34 / 18 / 47 / 26;
 	}
 	.pos-8 {
 		grid-area: 32 / 31 / 49 / 37;
@@ -642,23 +849,40 @@ h2 {
 
 
    .pos-1t {
-	grid-area: 9 / 15 / 20 / 18;
+	grid-area: 9 / 15 / 20 / 20;
+	z-index: 999;
 }
 
 	.pos-2t {
-	grid-area: 3 / 32 / 19 / 35;
+	grid-area: 12 / 31 / 19 / 38;
+	z-index: 999;
 }
 
-
 	.pos-3t {
-	grid-area: 16 / 47 / 26 / 50;
-	z-index: -998;
+	grid-area: 26 / 40 / 26 / 50;
+	z-index: 999;
 }
 
 	.pos-4t {
-	grid-area: 23 / 34 / 29 / 40;
-	z-index: -99;
+	grid-area: 12 / 45 / 29 / 49;
+	z-index: 999;
 }
+	.pos-5t {
+	grid-area: 23 / 4 / 29 / 40;
+	z-index: 999;
+}
+	.pos-6t {
+	grid-area: 37 / 13 / 49 / 49;
+	z-index: 999;
+}
+	.pos-7t {
+	grid-area: 42 / 27 / 50 / 50;
+	z-index: 999;
+}
+
+
+
+
 
 /* .pos-7t {
 	grid-area: 46 / 3 / 49 / 12;
@@ -729,27 +953,37 @@ h2 {
 
 
 
+
+
+
+
+
 	.parent {
-		margin-top: 7rem;
+		/* margin-top: 3rem; */
 		padding-top: 2rem;
 		display: flex;
 		flex-direction: row;
-		align-items: center;
 		justify-content: center;
+		align-items: center;
 		width: 100%;
+		height: 100vh;
 		
 	  }
 	  
 	  .img {
-		width: 24%;
+		/* width: 25%; */
 		padding: 2em;
-		color: #ffffff;
-		height: 70vh;
-		/* min-height: 800px; */
+		/* color: #ffffff; */
+		height: 100%;
+		min-height: 800px;
 	  }
 	  
 	  .txt {
-		width: 33%;
+		width: 25%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		
 		padding: 3rem;
 		/* min-height: 500px; */
 		color: #222;
@@ -844,13 +1078,420 @@ h2 {
 	background: black;
 	filter: contrast(30);
 } */
-@keyframes rotate {
+
+/* @keyframes rotate {
 	from {
 		transform: rotate(0deg);
    }
 	to {
 		transform: rotate(360deg);
    }
+}  */
+
+
+/* process */
+.process {
+	max-width: 1024px;
+	width: 90%;
+
+	margin: 0 auto;
+	
+}
+.timeline-item {
+	padding: 3em 2em 2em;
+	position: relative;
+	color: rgba(0, 0, 0, 0.7);
+	border-left: 2px solid rgba(0, 0, 0, 0.3);
+}
+.timeline-item p {
+	font-size: 1rem;
+}
+.timeline-item::before {
+	content: attr(frage);
+	position: absolute;
+	left: 1em;
+	font-weight: bold;
+	top: .2em;
+	display: block;
+	/* font-family: "Roboto", sans-serif; */
+	font-weight: 700;
+	font-size: 2rem;
+}
+.timeline-item::after {
+	width: 10px;
+	height: 10px;
+	display: block;
+	top: 1em;
+	position: absolute;
+	left: -7px;
+	border-radius: 10px;
+	content: "";
+	border: 2px solid rgba(0, 0, 0, 0.3);
+	background: white;
+}
+.timeline-item:last-child {
+	border-image: linear-gradient(
+			to bottom,
+			rgba(0, 0, 0, 0.3) 60%,
+			rgba(0, 0, 0, 0)
+		)
+		1 100%;
+}
+
+
+
+
+
+/* nav */
+/* @import url('https://fonts.googleapis.com/css?family=Rubik+Mono+One|Roboto+Mono:400,700&display=swap'); */
+ :root {
+	 
+}
+ /* html, body {
+	 height: 100%;
+}
+ body {
+	 color: var(--color-dark);
+	 font-family: var(--font-family-primary);
+	 overflow-x: hidden;
+	 position: relative;
+}
+ h1 {
+	 font-size: calc(1.5rem + 4vmin);
+	 font-weight: 700;
+	 margin-bottom: 2rem;
+}
+ p {
+	 line-height: 1.4;
+}
+ a {
+	 font-weight: 700;
+}
+ .page-container {
+	 display: flex;
+	 flex-direction: column;
+	 min-height: 100vh;
+	 justify-content: center;
+	 margin: 0 auto;
+	 max-width: 45rem;
+	 padding: 1rem;
+}
+ .page-container > * + * {
+	 margin-top: 1.5rem;
 } */
+ .nav-main {
+	 align-items: center;
+	 display: flex;
+	 height: 100%;
+	 justify-content: center;
+	 left: -100%;
+	 position: fixed;
+	 transition: left 0s calc(var(--td) * 2), transform 0s calc(var(--td) * 2);
+	 width: 100%;
+	 z-index: 9999;
+}
+ .nav-main::before, .nav-main::after {
+	 content: '';
+	 background-color: var(--color-primary);
+	 opacity: 0.97;
+	 height: 50%;
+	 left: 0;
+	 position: absolute;
+	 transform: translateX(-110%);
+	 transform-origin: 0 50%;
+	 transition: transform calc(var(--td) * 2) var(--td) var(--te);
+	 width: 100%;
+	 z-index: -100;
+}
+ .nav-main::before {
+	 top: 0;
+}
+ .nav-main::after {
+	 bottom: 0;
+}
+ .nav-main .menu__item {
+	 opacity: 0;
+	 transform: translateX(-1rem);
+	 transition: opacity var(--td) var(--te), transform var(--td) var(--te);
+}
+ [id="main-navigation-toggle"] {
+	 opacity: 0;
+	 position: fixed;
+	 top: -100%;
+}
+ [id="main-navigation-toggle"] ~ label {
+	 cursor: pointer;
+	 position: fixed;
+	 right: 1rem;
+	 top: 1rem;
+	 z-index: 99999;
+}
+ [id="main-navigation-toggle"] ~ label span {
+	 display: block;
+	 height: 2rem;
+	 padding: 0.5rem;
+	 position: relative;
+	 transition: transform calc(var(--td) * 3) var(--te);
+	 width: 3rem;
+}
+ [id="main-navigation-toggle"] ~ label span::before, [id="main-navigation-toggle"] ~ label span::after {
+	 background-color: var(--color-dark);
+	 bottom: 0;
+	 content: '';
+	 height: 6px;
+	 left: 0;
+	 margin: auto;
+	 position: absolute;
+	 right: 0;
+	 transition: transform calc(var(--td) * 3) var(--te);
+	 top: 0;
+	 width: calc(100% - 1rem);
+}
+ [id="main-navigation-toggle"] ~ label span::before {
+	 transform: rotate(0) translateY(-100%);
+}
+ [id="main-navigation-toggle"] ~ label span::after {
+	 transform: rotate(0) translateY(100%);
+}
+ [id="main-navigation-toggle"]:checked ~ label span {
+	 transform: rotate(1turn);
+}
+ [id="main-navigation-toggle"]:checked ~ label span::before {
+	 transform: rotate(45deg);
+}
+ [id="main-navigation-toggle"]:checked ~ label span::after {
+	 transform: rotate(-45deg);
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main {
+	 left: 0;
+	 transition: transform 0s;
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main::before, [id="main-navigation-toggle"]:checked ~ .nav-main::after {
+	 transform: translateX(0);
+	 transition-delay: 0s;
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main::after {
+	 transition-delay: calc(var(--td) / 2);
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main .menu__item {
+	 opacity: 1;
+	 transform: translateX(0);
+	 transition: opacity calc(var(--td) * 2) var(--te), transform calc(var(--td) * 2) var(--te);
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(1) {
+	 transition-delay: calc(var(--td) * 2 * (1 * 0.25));
+	 z-index: -1;
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(2) {
+	 transition-delay: calc(var(--td) * 2 * (2 * 0.25));
+	 z-index: -2;
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(3) {
+	 transition-delay: calc(var(--td) * 2 * (3 * 0.25));
+	 z-index: -3;
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(4) {
+	 transition-delay: calc(var(--td) * 2 * (4 * 0.25));
+	 z-index: -4;
+}
+ [id="main-navigation-toggle"]:checked ~ .nav-main .menu__item:nth-child(5) {
+	 transition-delay: calc(var(--td) * 2 * (5 * 0.25));
+	 z-index: -5;
+}
+ .menu {
+	 position: relative;
+	 text-align: center;
+	 z-index: 1;
+}
+ .menu > .menu__item {
+	 font-family: var(--font-family-secondary);
+	 font-size: 10vmin;
+	 font-weight: bold;
+}
+ .submenu {
+	 left: 0;
+	 opacity: 0;
+	 position: absolute;
+	 transform: translateY(-10%);
+	 top: 100%;
+	 width: 100%;
+	 visibility: hidden;
+	 z-index: 2;
+}
+ .submenu .menu__item {
+	 font-family: var(--font-family-primary);
+	 font-size: 3.5vmin;
+	 width: 100%;
+}
+ .submenu .menu__link {
+	 color: var(--color-secondary);
+	 text-shadow: 1px 1px 0 var(--color-primary), 2px 2px 0 var(--color-primary);
+}
+ .submenu .menu__link::before, .submenu .menu__link::after {
+	 display: none;
+}
+ .menu__item {
+	 display: block;
+	 position: relative;
+}
+ .menu__item:hover .menu__link::before, .menu__item:hover .menu__link::after {
+	 animation: blink 1s var(--td) steps(1, end) forwards infinite;
+	 transform: translateX(calc(100% - 0.5rem));
+	 transition-duration: calc(var(--td) * 3);
+}
+ .menu__item:hover .menu__link::after {
+	 transition-delay: calc(var(--td) / 2);
+}
+ .menu__item:hover .submenu {
+	 opacity: 1;
+	 transform: translateY(0);
+	 transition: transform calc(var(--td) * 2) calc(var(--td) * 3) var(--te), opacity calc(var(--td) * 2) calc(var(--td) * 3) var(--te), visibility 0s calc(var(--td) * 3);
+	 visibility: visible;
+}
+ .menu__link {
+	 color: var(--color-dark);
+	 display: inline-block;
+	 font-weight: normal;
+	 overflow: hidden;
+	 padding: 0.5rem 1rem 0.125rem;
+	 position: relative;
+	 text-decoration: none;
+	 transition: color var(--td) var(--te), opacity var(--td) var(--te), transform var(--td) var(--te);
+	 z-index: 1;
+}
+ .menu__link::before, .menu__link::after {
+	 content: '';
+	 background-color: var(--color-light);
+	 height: 50%;
+	 left: 0;
+	 position: absolute;
+	 transform: translateX(-110%);
+	 transform-origin: 0 50%;
+	 transition: transform 0s var(--te);
+	 width: 100%;
+	 z-index: -1;
+}
+ .menu__link::before {
+	 top: 0;
+}
+ .menu__link::after {
+	 bottom: 0;
+}
+ .menu:not(:focus-within):not(:hover) .menu__item .menu__link {
+	 opacity: 1;
+	 transform: translate(0, 0);
+}
+ .menu__item {
+	 --pull: 30%;
+}
+ .menu__item .menu__link {
+	 opacity: 0.25;
+	 transition-duration: calc(var(--td) * 3);
+	 transform: translate(0, calc(var(--pull) * -1));
+}
+ .menu__item .submenu .menu__link {
+	 opacity: 1;
+}
+ .menu__item:hover > .menu__link {
+	 color: var(--color-secondary);
+	 opacity: 1;
+	 transform: translate(0, 0);
+}
+ .menu__item:hover > .menu__link:hover {
+	 color: var(--color-light);
+	 transition-delay: 0s;
+}
+ .menu__item:hover ~ .menu__item > .menu__link {
+	 transition-duration: calc(var(--td) * 3);
+	 transform: translate(0, var(--pull));
+}
+ @keyframes blink {
+	 50%, 100% {
+		 opacity: 0;
+	}
+}
+ 
 
 
+/* ks */
+
+.ksgrid {
+    /* width: 90%;
+    display: grid;
+    grid-gap: 10px 10%;
+    grid-template-columns: repeat(2, minmax(20rem, 1fr));
+    grid-template-columns: repeat(2, 20%);
+    grid-auto-rows: 20px;
+    justify-content: center;
+    margin: auto; */
+
+    width: 60%;
+    display: grid;
+    grid-gap: 10px 10%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 20px;
+    justify-content: center;
+    margin: auto;
+    
+  }
+
+
+
+  @media screen and (max-width: 53em) {
+
+    .ksgrid {
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        padding: 1em;
+        
+      }
+
+    
+	
+}
+  
+  .item {
+    background-color: #ffffff;
+  }
+  
+  .photothumb{
+    width: 100%;
+
+  }
+  
+  .title {
+    padding: 20px;
+   }
+  
+  .title h3{
+    font-size: 1.2em;
+    color: #ffffff;
+    text-transform: uppercase;
+  }
+  
+  .project .title{
+    background-color: #607D8B;
+  }
+  
+  .blog .title{
+    background-color: #ff9800;
+  }
+  
+  .photo .title{
+    background-color: #f44336;
+  }
+  
+  .desc{
+    padding: 10px 10px 5px 10px;
+  }
+  
+  .desc img{
+    width: 50%;
+    margin: 0 10px 10px 0;
+    float: left;
+  }
+  
+  .desc p{
+    margin-bottom: 10px;
+  }
