--- a/base.css
+++ b/base.css
@@ -126,7 +126,7 @@ h3 {
 p {
 	font-size: 19px;
 	line-height: 1.4;
-	font-weight: 400;
+	font-weight: 500;
 	letter-spacing: 1.5px;
 	color: var(--color-text);
 	/* padding: 12px; */
@@ -134,7 +134,29 @@ p {
 
 
 
+footer {
+	display: flex; 
+	flex-direction: row;
+	justify-content: space-around;
+    align-items: center;
+	padding: 10px;
+	background-color: var(--color-link-hover);
+	opacity: 0.98;
+	margin-top: auto;
+	bottom: 0;
+	
+}
 
+footer p {
+	color: white;
+}
+
+.footer-left {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+    justify-content: space-between;
+}
 
 
 /* title styles */
@@ -1531,10 +1553,6 @@ p {
   /* nav2 */
   
 
-/* Please ❤ this if you like it! */
-
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 
 /* body{
 	font-family: 'Montserrat', sans-serif;
