--- a/base.css
+++ b/base.css
@@ -144,8 +144,22 @@ font-size: 16px;
 	border-bottom: solid 1px;
 }
 
+.ks-cfa {
+	margin: auto;
+	padding-top: 2rem;
+display: flex;
+flex-direction: column;
+justify-content: center;
+    align-items: center;
+	padding: 2rem;
+}
 
-
+.ks-cfa p{
+	font-weight: 800;
+}
+.ks-cfa a{
+	font-weight: 800;
+}
 
 
 
