--- a/base.css
+++ b/base.css
@@ -49,7 +49,7 @@ body {
 	 --te: cubic-bezier(0.215, 0.61, 0.355, 1);
 	--color-text: #a1969a;
     --color-bg: #ffff;
-    --color-link: #C7B8BD;
+    --color-link: #706367;
 	--color-link-hover: #fc6565;
 	--color-content-title-sub: #292828;
     color: var(--color-text);
