--- a/base.css
+++ b/base.css
@@ -1275,17 +1275,48 @@ p {
 
 /* process */
 .process {
-	max-width: 1024px;
+	max-width: 900px;
 	width: 90%;
-
 	margin: 0 auto;
+	padding: 3rem 0 3rem 0;
 	
 }
+
+.process-intro {
+	display: flex; 
+	flex-direction: row;
+	justify-content: space-evenly;
+    align-items: center;
+	
+}
+
+.process-intro p {
+	width: 50%;
+	padding: 3rem;
+	font-size: 16px;
+}
+
+
+@media screen and (max-width: 1024px) {
+	.process-intro {
+		display: flex; 
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		
+	}
+	.process-intro p {
+		width: 100%;
+		padding: 1rem;
+		font-size: 16px;
+	}
+}
+
 .timeline-item {
 	padding: 3em 2em 2em;
 	position: relative;
 	color: rgba(0, 0, 0, 0.7);
-	border-left: 2px solid rgba(0, 0, 0, 0.3);
+	border-left: 3px solid rgba(0, 0, 0, 0.3);
 }
 .timeline-item p {
 	font-size: 1rem;
@@ -1299,7 +1330,7 @@ p {
 	display: block;
 	/* font-family: "Roboto", sans-serif; */
 	font-weight: 700;
-	font-size: 2rem;
+	font-size: 1.25rem;
 }
 .timeline-item::after {
 	width: 10px;
