--- a/base.css
+++ b/base.css
@@ -111,6 +111,7 @@ h2 {
 	font-size: 1.75rem;
 	color:rgba(233, 16, 16, 0.815);
 	font-family: 'Cinzel', serif;
+	font-weight: 500;
 }
 h3 {
 	font-size: 1.5rem;
