--- a/base.css
+++ b/base.css
@@ -101,7 +101,7 @@ a:focus {
 
 
 h1 {
-	color:rgba(233, 16, 16, 0.815);
+	color: var(--color-text);
 	font-weight: bold;
 	font-size: 2rem;
 	margin: 0; 
@@ -109,13 +109,13 @@ h1 {
 
 h2 {
 	font-size: 1.75rem;
-	color:rgba(233, 16, 16, 0.815);
+	color: var(--color-text);
 	font-family: 'Playfair Display SC', serif;
 	font-weight: 500;
 }
 h3 {
 	font-size: 1.5rem;
-	color:rgba(233, 16, 16, 0.815);
+	color: var(--color-text);
 }
 
 h4 {
@@ -498,7 +498,7 @@ p {
 		height: 100%;
 		background-size: cover;
 		background-position: 50% 50%;
-		border-radius: 9%;
+		/* border-radius: 9%; */
 	}
 
 
@@ -600,10 +600,10 @@ p {
 }
 
 .content__title {
-	font-family: 'Montserrat', sans-serif;
+	font-family: sans-serif;
 	color: rgba(0, 0, 0, 0.815);
 	font-weight: bold;
-	font-size: 13vw;
+	font-size: 9vw;
 	margin: 0;
 	line-height: 1;
 	position: relative;
@@ -616,7 +616,7 @@ p {
 
 .content__title-sub {
 	color: rgba(0, 0, 0, 0.795);
-	font-size: 3vw;
+	font-size: 2vw;
 	display: block;
 	/* margin-left: 3vw; */
 	line-height: 0.5;
@@ -791,7 +791,7 @@ p {
 
 
 .landing-img {
-	filter: drop-shadow(0px 10px 10px rgb(102, 103, 104)); 
+	/* filter: drop-shadow(0px 10px 10px rgb(102, 103, 104));  */
 	opacity: 1;
 }
 
@@ -915,7 +915,7 @@ p {
 		height: 100%;
 		background-size: cover;
 		background-position: 50% 50%;
-		border-radius: 3%;
+		/* border-radius: 3%; */
 	}
 	
 	.grid--img .grid__item-img {
@@ -1155,7 +1155,7 @@ p {
 		justify-content: space-around;
 		align-items: center;
 		padding: 10px;
-		background-color: var(--color-link-hover);
+		background-color: var(--color-primary);
 		opacity: 0.98;
 		margin-top: auto;
 		bottom: 0;
