--- a/base.css
+++ b/base.css
@@ -101,7 +101,7 @@ a:focus {
 
 
 h1 {
-	color: var(--color-text);
+	color: var(--color-primary);
 	font-weight: bold;
 	font-size: 2rem;
 	margin: 0; 
@@ -204,11 +204,11 @@ p {
 		padding: 4rem 0 2rem 0;
 		text-align: center;
 		font-size: 11vw;
-		font-family: 'Montserrat', sans-serif;
+		font-family: sans-serif;
 	}
 	.header h2 {
 		text-align: center;
-		font-family: 'Montserrat', sans-serif;
+		font-family: sans-serif;
 	}
 }
 
@@ -218,12 +218,12 @@ p {
 		padding: 4rem 0 4rem 0;
 		text-align: center;
 		font-size: 5vw;
-		font-family: 'Montserrat', sans-serif;
+		font-family: sans-serif;
 		
 	}
 	.header h2 {
 		text-align: center;
-		font-family: 'Montserrat', sans-serif;
+		font-family: sans-serif;
 	}
 
 }
