--- a/base.css
+++ b/base.css
@@ -1846,7 +1846,7 @@ p {
   z-index: 9999;
   overflow: hidden;
   box-shadow: 0 8px 30px 0 rgba(0,0,0,0.3);
-  background-color: var(--color-link-hover);
+  background-color: var(--color-text);
   opacity: 0.98;
   animation: border-transform 7s linear infinite;
   transition: top 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),  
@@ -1915,7 +1915,7 @@ p {
 	font-weight: 800;
 	display: inline-block;
 	position: relative;
-	color: #fa9494;
+	color: white;
 	transition: all 250ms linear;
   }
 
